// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for community edition 1`] = `
<div
  className="boxed-group it__plugin_risk_consent_box"
>
  <h2>
    marketplace.risk_consent.title
  </h2>
  <div
    className="boxed-group-inner"
  >
    <p>
      marketplace.risk_consent.description
    </p>
    <p
      className="spacer-top"
    >
      marketplace.risk_consent.installation
    </p>
    <Button
      className="display-block big-spacer-top button-primary"
      onClick={[MockFunction]}
    >
      marketplace.risk_consent.action
    </Button>
  </div>
</div>
`;

exports[`should render correctly for risk consent ACCEPTED 1`] = `""`;

exports[`should render correctly for risk consent NOT_ACCEPTED 1`] = `
<div
  className="boxed-group it__plugin_risk_consent_box"
>
  <h2>
    marketplace.risk_consent.title
  </h2>
  <div
    className="boxed-group-inner"
  >
    <p>
      marketplace.risk_consent.description
    </p>
    <Button
      className="display-block big-spacer-top button-primary"
      onClick={[MockFunction]}
    >
      marketplace.risk_consent.action
    </Button>
  </div>
</div>
`;

exports[`should render correctly for risk consent REQUIRED 1`] = `
<div
  className="boxed-group it__plugin_risk_consent_box"
>
  <h2>
    marketplace.risk_consent.title
  </h2>
  <div
    className="boxed-group-inner"
  >
    <p>
      marketplace.risk_consent.description
    </p>
    <Button
      className="display-block big-spacer-top button-primary"
      onClick={[MockFunction]}
    >
      marketplace.risk_consent.action
    </Button>
  </div>
</div>
`;

exports[`should render correctly for risk consent undefined 1`] = `
<div
  className="boxed-group it__plugin_risk_consent_box"
>
  <h2>
    marketplace.risk_consent.title
  </h2>
  <div
    className="boxed-group-inner"
  >
    <p>
      marketplace.risk_consent.description
    </p>
    <Button
      className="display-block big-spacer-top button-primary"
      onClick={[MockFunction]}
    >
      marketplace.risk_consent.action
    </Button>
  </div>
</div>
`;
